--- a/05-arreglos/index.html
+++ b/05-arreglos/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Loops</h1>
-
-    <script src="./js/execute.js"></script>
+    
+    <script src="./js/main.js"></script>
 </body>
 </html>
