Añadiendo cambios de clase 8 de Sept

--- a/05-arreglos/index.html
+++ b/05-arreglos/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     
-    <script src="./js/main.js"></script>
+<h1>Arreglos</h1>
+
+    <script src="./js/execute.js"></script>
 </body>
 </html>
