--- a/08-objetos/index.html
+++ b/08-objetos/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Objetos</h1>
     <h2>Wow que cool</h2>
+    <p>Funciona?</p>
     <script src="./js/execute.js"></script>
 </body>
 </html>
